envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 8001 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 8010 }
    # These logs are supposedly "complementary" to the access logs of connection manager
    # so far I have found them not useful
    # 
    # access_log:
    # - name: envoy.access_loggers.http_grpc
    #   typed_config:
    #     "@type": type.googleapis.com/envoy.extensions.access_loggers.grpc.v3.HttpGrpcAccessLogConfig
    #     common_config:
    #       log_name: access_log_cluster_http
    #       grpc_service:
    #         envoy_grpc:
    #           cluster_name: access_log_cluster
    #       transport_api_version: V3
    # - name: envoy.access_loggers.tcp_grpc
    #   typed_config:
    #     "@type": type.googleapis.com/envoy.extensions.access_loggers.grpc.v3.TcpGrpcAccessLogConfig
    #     common_config:
    #       log_name: access_log_cluster_tcp
    #       grpc_service:
    #         envoy_grpc:
    #           cluster_name: access_log_cluster
    #       transport_api_version: V3
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          http_filters:
          - name: envoy.filters.http.lua
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
              default_source_code:
                inline_string: |
                  function envoy_on_request(request_handle)
                    request_handle:httpCall("lua-listener",
                    {
                      [":method"] = "POST",
                      [":path"] = "/",
                      [":authority"] = "lua-listener",
                    },
                    "hello world",
                    5000)
                  end
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: [ "*" ]
              routes:
              - match: { prefix: "/ws" }
                route:
                  cluster: backend-ws
                  timeout: 900s
                  upgrade_configs:
                  - upgrade_type: websocket
                    enabled: true
              - match: { prefix: "/" }
                route:
                  cluster: backend
          access_log:
          - name: envoy.access_loggers.http_grpc
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.grpc.v3.HttpGrpcAccessLogConfig
              common_config:
                log_name: access_log_cluster_http
                grpc_service:
                  envoy_grpc:
                    cluster_name: access_log_cluster
                transport_api_version: V3
          - name: envoy.access_loggers.tcp_grpc
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.grpc.v3.TcpGrpcAccessLogConfig
              common_config:
                log_name: access_log_cluster_tcp
                grpc_service:
                  envoy_grpc:
                    cluster_name: access_log_cluster
                transport_api_version: V3
  - name: listener_1
    address:
      socket_address: { address: 0.0.0.0, port_value: 8020 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: [ "*" ]
              routes:
              - match: { prefix: "/" }
                route:
                  cluster: backend2
          access_log:
          - name: envoy.access_loggers.http_grpc
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.grpc.v3.HttpGrpcAccessLogConfig
              common_config:
                log_name: access_log_cluster_http
                grpc_service:
                  envoy_grpc:
                    cluster_name: access_log_cluster
                transport_api_version: V3

  clusters:
  - name: backend
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: round_robin
    load_assignment:
      cluster_name: backend
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: backend
                port_value: 8123
    # http_protocol_options: {} forces http1.1, should be by default
    # http2_protocol_options: {}
    max_requests_per_connection: 1000 # enables reusing connections
  - name: backend2
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: round_robin
    load_assignment:
      cluster_name: backend
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: backend2
                port_value: 8123
    max_requests_per_connection: 1000
  - name: lua-listener
    connect_timeout: 0.25s
    type: STATIC
    lb_policy: round_robin
    load_assignment:
      cluster_name: lua-listener
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8020
    max_requests_per_connection: 1000
  - name: backend-ws
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: round_robin
    load_assignment:
      cluster_name: backend-ws
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: backend-ws
                port_value: 8765
  - name: access_log_cluster
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: round_robin
    load_assignment:
      cluster_name: access_log_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: access_log_service
                port_value: 18000
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        common_http_protocol_options:
          idle_timeout: 5s
        explicit_http_config:
          http2_protocol_options: {} # tells envoy that only http2 is to be used on this backend cluster
